# Nixos-config

./: .gitignore  LLAMA-CPP-RESEARCH-STACK.md  README.md  SERVICES.md  configuration.nix  flake.nix  hardware-configuration.nix  home-legion.nix  home.nix
.claude/: settings.json
.cursor/: bestpracticesnixos.md
.cursor/agent-rules-books/: COMPATIBILITY.md  USAGE.md
.cursor/rules/: nix-modules.mdc  nixos-best-practices.mdc  software-engineering-books.mdc
.github/workflows/: check.yml
apps/homeport-tray/: default.nix
apps/homeport-tray/src-tauri/: Cargo.toml  tauri.conf.json
apps/homeport-tray/src-tauri/src/: main.rs
home/: common.nix  home-pi.nix
home/core/: default.nix  identity.nix  state-version.nix
home/desktop/: gnome.nix
home/programs/: claude-code.nix  cursor.nix  git.nix  google-chrome.nix  goose.nix  hermes.nix  homeport-tray.nix  packages-pi.nix  packages.nix
hosts/: common.nix
hosts/legion/: configuration.nix  hardware-configuration.nix
hosts/nixos/: configuration.nix  hardware-configuration.nix
hosts/nixos-pi/: configuration.nix  hardware-configuration.nix
modules/core/: agenix.nix  binfmt.nix  host-facts.nix  hostname.nix  locale.nix  (+5 more)
scripts/: flash-pi-bootstrap.sh  flash-pi-raspios.sh  install-nixos-on-pi.sh  pi-raspios-cloudinit.yaml  pi-raspios-network-config.yaml
secrets/: README.md  hermes-env.age  hermes-env.example  honcho-env.example  n8n-db-password.age  nixos-pi-ssh-host-key.pub  searxng-secret-key.age  secrets.nix  tailscale-auth-key.age  unsloth-studio.env.age  uptime-kuma-sync.env.age  worldmonitor-env.age
(+200 files in other folders)
